add tests for project