@@ -4,6 +4,8 @@ import java.time.LocalDateTime;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
@@ -29,16 +31,16 @@ public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler
                 .getAllErrors()
                 .stream()
                 .map(this::getErrorMessage)
-                .toList();
+                .collect(Collectors.toList());
         body.put("errors", errors);
         return new ResponseEntity<>(body, headers, status);
     }
 
-    private String getErrorMessage(ObjectError objectError) {
-        if (objectError instanceof FieldError fieldError) {
-            return String.format("'%s', '%s' !",
-                    fieldError.getField(), objectError.getDefaultMessage());
+    private String getErrorMessage(ObjectError e) {
+        if (e instanceof FieldError) {
+            String field = ((FieldError) e).getField();
+            return field + ", " + e.getDefaultMessage();
         }
-        return objectError.getDefaultMessage();
+        return e.getDefaultMessage();
     }
 }
